<resources>
    <string name="app_name">WebApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="link_selector_nav_label">Link Selector</string>
    <string name="web_viewer_nav_label">Web Viewer</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="link_button_1">Link 1</string>
    <string name="link_button_2">Link 2</string>
    <string name="link_button_3">Link 3</string>
    <string name="link_button_4">Link 4</string>
    <string name="link_button_5">Link 5</string>
</resources>